<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_Interpreter_Inputs" Id="{1c6ac9c5-002b-452e-aa05-6d7a79acb638}">
    <Declaration><![CDATA[TYPE ST_Interpreter_Inputs :
STRUCT
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>