<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="stHMI_In" Id="{00e1f3e5-dcaa-4395-83d0-f9d2a4f4c93d}">
    <Declaration><![CDATA[TYPE stHMI_In :
STRUCT
    
// Input functions from the HMI

bHomeX          : BOOL;
bZeroX          : BOOL;
bHomeY          : BOOL;
bZeroY          : BOOL;
bHomeZ          : BOOL;
bZeroZ          : BOOL;
bHomeAllAxes    : BOOL;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>